--- a/pi/pubspec.yaml
+++ b/pi/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.2.3
   cpf_cnpj_validator: ^2.0.0
   get: ^4.6.6
+  image_picker: ^1.0.8
+  geolocator: ^11.1.0
 
 dev_dependencies:
   flutter_test:
