--- a/pi/.vscode/settings.json
+++ b/pi/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "cmake.sourceDirectory": "E:/Flutter/Projects/PI/PI_flutter/pi/build/windows/x64/_deps/nuget-subbuild"
 }
