--- a/pi/pubspec.yaml
+++ b/pi/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   image_picker: ^1.0.8
   geolocator: ^12.0.0
   intl: ^0.19.0
+  image: ^4.2.0
+  latlong2: ^0.9.1
+  flutter_map: ^7.0.2
+  path_provider: ^2.1.3
+  latlng: ^2.0.7
 
 dev_dependencies:
   flutter_test:
